--- a/packages/style/index.scss
+++ b/packages/style/index.scss
@@ -1,4 +1,4 @@
-@import './them1.less';
+@import './them1.scss';
 
 // @font-face {font-family: "iconfont";
 //     src: url('../font/iconfont.eot?t=1471339595'); /* IE9*/
